crates/carta/tests/snapshots/golden_writer__rst__common__blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
   quoted

   more lines here
