crates/carta/tests/snapshots/golden_writer__rst__common__bullet-nested.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
- outer

  - inner one
  - inner two
