crates/carta/tests/snapshots/golden_writer__rst__common__code-block-indented.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
::

   indented code
   second line
