crates/carta/tests/snapshots/golden_writer__rst__common__code-block-lang.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.. code:: rust

   let s = "hi";
   x < y && y > z
