crates/carta/tests/snapshots/golden_writer__rst__common__code-block-numbered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.. code:: python
   :number-lines:

   print(1)
   print(2)
