crates/carta/tests/snapshots/golden_writer__rst__common__definition-list-loose.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
Term
   Definition one

   Definition two
