crates/carta/tests/snapshots/golden_writer__rst__common__div.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.. note::
   :name: d

   body paragraph
