crates/carta/tests/snapshots/golden_writer__rst__common__emphasis-family.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
*emph* **strong** [STRIKEOUT:struck] super\ :sup:`2` sub\ :sub:`3`
